REMOVE R38M CONTENT: Delete infrastructure and HQ slides not in R3.5M proposal
User feedback: "this not in proposal of 3.5" and "not needed no rental prop"

Removed Slides:
1. Slide 8B: Cloud-Independent AI Infrastructure
   - R15M AI Infrastructure Assets (R3.5M only has R1.84M total CAPEX!)
   - DGX A100 (320GB VRAM) - Llama 3.1 8B Training (NOT in R3.5M)
   - RTX 6000 (48GB) - Real-time Offline Inference (NOT in R3.5M)
   - 6× M5 MacBook Pro (R3.5M only has 1 MacBook Pro + 2 MacBook Air)
   - Solar + Battery + Diesel - Stage 6 Resilient (NOT in R3.5M budget)
   - Strategic moat messaging about R15M infrastructure

2. Slide 8C: Strategic HQ Location - Bela-Bela, Limpopo
   - R500k+ cost savings vs Gauteng HQ (NOT in R3.5M)
   - R650k facility creation (NO rental property in R3.5M)
   - R360k rent savings (NOT applicable)
   - Modimolle Cluster: 250 farmers + Polokwane Cluster: 250 farmers = 500 total (R3.5M is 100 farmers)
   - Cost arbitrage: salaries, fuel costs (NOT detailed in R3.5M)

Fixed Values:
3. Marketplace GMV: R15M → R2.5M (accurate for 100-farmer pilot Year 1)

R3.5M Reality:
- Total CAPEX: R1.84M (Vehicle R960k + Tech R731k + Content R150k)
- Technology: Mac Studio M3 Ultra, MacBook Pro M4 Max, iPads (NOT DGX/RTX)
- No rental facility budget
- 100 farmers in Waterberg District, Limpopo (NOT 500 farmers, NO dual clusters)
- R2.5M farmer sales target (NOT R15M)

All content now matches official TIA_R3.5M_COMPLETE_APPLICATION.md

--- a/index.html
+++ b/index.html
@@ -568,95 +568,6 @@
             </div>
         </div>
 
-        <!-- Slide 8B: Cloud-Independent AI Infrastructure - THE STRATEGIC MOAT -->
-        <div class="slide">
-            <h2>Cloud-Independent AI Infrastructure</h2>
-            <p style="text-align: center; font-size: clamp(0.85rem, 1.5vw, 1.05rem); color: #999; margin-bottom: 2vh;">
-                Why We Own Hardware vs Rent Cloud
-            </p>
-
-            <div class="component-explanation">
-                <div class="component-left">
-                    <div class="component-stat">
-                        <div class="stat-value">R15M</div>
-                        <div class="stat-label">AI Infrastructure Assets</div>
-                    </div>
-                    <p class="component-desc">
-                        <strong>3-Tier Architecture</strong><br>
-                        Training | Edge Inference | Field Devices<br>
-                        POPIA Compliant | Load-Shed Resilient
-                    </p>
-                </div>
-                <div class="component-right">
-                    <h3>Infrastructure Layers:</h3>
-                    <ul class="is-list">
-                        <li><i class="fas fa-server"></i> <strong>TIER 1:</strong> DGX A100 (320GB VRAM) - Llama 3.1 8B Training</li>
-                        <li><i class="fas fa-microchip"></i> <strong>TIER 2:</strong> M2 Ultra + RTX 6000 (48GB) - Real-time Offline Inference</li>
-                        <li><i class="fas fa-laptop"></i> <strong>TIER 3:</strong> 6× M5 MacBook Pro - 200ms Response (vs 3-5s cloud)</li>
-                        <li><i class="fas fa-solar-panel"></i> <strong>ENERGY:</strong> Solar + Battery + Diesel - Stage 6 Resilient</li>
-                    </ul>
-
-                    <h3>Cost Advantage:</h3>
-                    <ul class="is-list">
-                        <li><i class="fas fa-check"></i> R1.84M CAPEX vs R540k/year Cloud Recurring</li>
-                        <li><i class="fas fa-check"></i> Zero POPIA Risk (Data Never Leaves SA)</li>
-                        <li><i class="fas fa-check"></i> 15× Faster Inference (200ms vs 3-5s)</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="analogy-box" style="background: linear-gradient(135deg, rgba(76, 175, 80, 0.2), rgba(76, 175, 80, 0.1)); border: 2px solid #4CAF50;">
-                <i class="fas fa-shield-alt" style="font-size: clamp(2rem, 3vw, 2.5rem); color: #4CAF50; margin-bottom: 1vh;"></i>
-                <p style="font-size: clamp(1rem, 1.8vw, 1.3rem); line-height: 1.6; margin: 0;">
-                    <strong style="color: #4CAF50;">Strategic Moat:</strong> R15M upfront buys permanent competitive advantage. Cloud = R540k/year forever. We own the infrastructure, control the data, dominate the speed. <strong style="color: #4CAF50;">No cloud provider can match this.</strong>
-                </p>
-            </div>
-        </div>
-
-        <!-- Slide 8C: Strategic HQ Location -->
-        <div class="slide">
-
-            <h2>Strategic HQ Location: Bela-Bela, Limpopo</h2>
-
-            <div class="component-explanation">
-                <div class="component-left">
-                    <div class="component-stat">
-                        <div class="stat-value">R500k+</div>
-                        <div class="stat-label">Cost Savings vs Gauteng HQ</div>
-                    </div>
-                    <p class="component-desc">
-                        <strong>&lt;2hr Response Time | 100 Farmers</strong><br>
-                        Modimolle 30km | Polokwane 100km<br>
-                        Bela-Bela Operations Center
-                    </p>
-                </div>
-                <div class="component-right">
-                    <h3>Location Advantages:</h3>
-                    <ul class="is-list">
-                        <li><i class="fas fa-map-marked-alt"></i> <strong>Tactical Proximity:</strong> 2.5× faster deployment vs Johannesburg (4-6hr away)</li>
-                        <li><i class="fas fa-handshake"></i> <strong>Community Embedded:</strong> Sepedi speakers, cultural fluency, physical presence</li>
-                        <li><i class="fas fa-chart-line"></i> <strong>Cost Arbitrage:</strong> -R360k rent, -15-20% salaries, -40% fuel costs</li>
-                        <li><i class="fas fa-leaf"></i> <strong>Provincial Development:</strong> 5 jobs in Limpopo, R1.3M stays local</li>
-                    </ul>
-
-                    <h3>Coverage Area:</h3>
-                    <ul class="is-list">
-                        <li><i class="fas fa-users"></i> Modimolle Cluster: 250 farmers (30km radius)</li>
-                        <li><i class="fas fa-users"></i> Polokwane Cluster: 250 farmers (100km radius)</li>
-                        <li><i class="fas fa-clock"></i> Field Response: 100% coverage under 2 hours</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="analogy-box">
-                <i class="fas fa-building" style="font-size: clamp(2rem, 3vw, 2.5rem); color: #4CAF50; margin-bottom: 1vh;"></i>
-                <p style="font-size: clamp(1rem, 1.8vw, 1.3rem); line-height: 1.6; margin: 0;">
-                    <strong style="color: #4CAF50;">Calculated Positioning:</strong> R650k facility creates R500k+ savings vs Gauteng. Team lives where they work, speaks farmers' language, arrives in 2 hours not 6. <strong style="color: #4CAF50;">Geography = competitive advantage.</strong>
-                </p>
-            </div>
-
-        </div>
-
         <!-- Slide 9: 12-Month Roadmap -->
         <div class="slide">
             <h2>12-Month Technology Validation Roadmap</h2>
@@ -927,8 +838,8 @@
                     </div>
                     <div class="impact-metric financial">
                         <div class="impact-icon"><i class="fas fa-shopping-cart"></i></div>
-                        <div class="impact-value">R15M</div>
-                        <div class="impact-label">Annual GMV<br>(Marketplace)</div>
+                        <div class="impact-value">R2.5M</div>
+                        <div class="impact-label">Farmer Sales<br>(Year 1 Pilot)</div>
                     </div>
                     <div class="impact-metric social">
                         <div class="impact-icon"><i class="fas fa-hand-holding-usd"></i></div>
