--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                 <!-- Header -->
                 <div style="text-align: center;">
                     <div style="display: inline-block; background: rgba(33, 150, 243, 0.2); border: 2px solid #2196F3; border-radius: 50px; padding: 0.6vh 1.8vw; margin-bottom: 1vh;">
-                        <span style="color: #2196F3; font-weight: 700; font-size: clamp(0.75rem, 1.4vw, 0.95rem);">PRODUCTION PLATFORM VALIDATION</span>
+                        <span style="color: #2196F3; font-weight: 700; font-size: clamp(0.75rem, 1.4vw, 0.95rem);">🌍 INTERNATIONAL PLATFORM PORTFOLIO</span>
                     </div>
-                    <h2 style="font-size: clamp(2rem, 4vw, 3.2rem); margin-bottom: 0.8vh; color: #fff; font-weight: 900;">Not Beginners: Live Production Platforms</h2>
-                    <p style="font-size: clamp(0.85rem, 1.6vw, 1.05rem); color: #ccc; margin: 0;">Team has built, deployed & maintained platforms using EXACT UAEI architecture</p>
+                    <h2 style="font-size: clamp(2rem, 4vw, 3.2rem); margin-bottom: 0.8vh; color: #fff; font-weight: 900;">Global Standards → SA Application</h2>
+                    <p style="font-size: clamp(0.85rem, 1.6vw, 1.05rem); color: #ccc; margin: 0;">Live production platforms in USA 🇺🇸 & Israel 🇮🇱 markets | Same tech stack → UAEI</p>
                 </div>
 
                 <!-- Platform Cards Grid -->
@@ -264,8 +264,8 @@
                                 <i class="fas fa-shopping-cart"></i>
                             </div>
                             <div>
-                                <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #2196F3; margin-bottom: 0.3vh; font-weight: 800;">KFAR Marketplace</h3>
-                                <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-style: italic;">kfar-final.vercel.app</p>
+                                <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #2196F3; margin-bottom: 0.3vh; font-weight: 800;">KFAR Marketplace 🇮🇱</h3>
+                                <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-style: italic;">kfar-final.vercel.app | Israel Market</p>
                             </div>
                         </div>
                         <ul style="font-size: clamp(0.75rem, 1.4vw, 0.9rem); color: #ccc; line-height: 1.5; padding-left: 1.5vw; margin-bottom: 1.5vh;">
@@ -275,7 +275,7 @@
                             <li><strong style="color: #2196F3;">Next.js + Vercel</strong> | Live production</li>
                         </ul>
                         <div style="background: rgba(33, 150, 243, 0.15); border-left: 3px solid #2196F3; border-radius: 8px; padding: 1vh 1.2vw;">
-                            <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-weight: 600;">✅ Validates AgriFresh™ marketplace capability</p>
+                            <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-weight: 600;">✅ International e-commerce standards → AgriFresh™ marketplace</p>
                         </div>
                     </div>
 
@@ -286,8 +286,8 @@
                                 <i class="fas fa-graduation-cap"></i>
                             </div>
                             <div>
-                                <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #2196F3; margin-bottom: 0.3vh; font-weight: 800;">iSPEAK Learning</h3>
-                                <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-style: italic;">ispeak-app-prod.vercel.app</p>
+                                <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #2196F3; margin-bottom: 0.3vh; font-weight: 800;">iSPEAK Learning 🇺🇸</h3>
+                                <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-style: italic;">ispeak-app-prod.vercel.app | USA Market</p>
                             </div>
                         </div>
                         <ul style="font-size: clamp(0.75rem, 1.4vw, 0.9rem); color: #ccc; line-height: 1.5; padding-left: 1.5vw; margin-bottom: 1.5vh;">
@@ -297,21 +297,21 @@
                             <li><strong style="color: #2196F3;">Next.js + Supabase</strong> | Live production</li>
                         </ul>
                         <div style="background: rgba(33, 150, 243, 0.15); border-left: 3px solid #2196F3; border-radius: 8px; padding: 1vh 1.2vw;">
-                            <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-weight: 600;">✅ Validates AgriLearn™ content delivery capability</p>
+                            <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #90CAF9; margin: 0; font-weight: 600;">✅ EdTech platform expertise → AgriLearn™ content delivery</p>
                         </div>
                     </div>
                 </div>
 
-                <!-- Technology Stack Validation -->
+                <!-- International Credibility Statement -->
                 <div style="max-width: 1000px; margin: 0 auto; background: rgba(76, 175, 80, 0.1); border-left: 5px solid #4CAF50; border-radius: 10px; padding: 1.8vh 2.5vw;">
                     <div style="display: flex; align-items: center; gap: 1.5vw;">
                         <div style="width: clamp(40px, 4.5vh, 55px); height: clamp(40px, 4.5vh, 55px); background: linear-gradient(135deg, #4CAF50, #2E7D32); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: clamp(1.2rem, 2.2vh, 1.6rem); flex-shrink: 0;">
-                            <i class="fas fa-code"></i>
+                            <i class="fas fa-globe"></i>
                         </div>
                         <div style="flex: 1;">
-                            <h4 style="font-size: clamp(1rem, 2vw, 1.3rem); color: #4CAF50; margin-bottom: 0.5vh; font-weight: 700;">Technology Stack Match: 100%</h4>
+                            <h4 style="font-size: clamp(1rem, 2vw, 1.3rem); color: #4CAF50; margin-bottom: 0.5vh; font-weight: 700;">Why International Platforms = Higher Credibility</h4>
                             <p style="font-size: clamp(0.85rem, 1.6vw, 1rem); color: #ddd; line-height: 1.4; margin: 0;">
-                                Both platforms use <strong style="color: #4CAF50;">Next.js + Vercel/Supabase</strong> (exact UAEI architecture). Team isn't proposing theoretical technology—<strong style="color: #FFE082;">they've already built, deployed, and maintained production platforms</strong>. TRL 3-4 validated with live code.
+                                <strong style="color: #4CAF50;">USA/Israel markets demand global standards</strong>—competitive tech stacks, rigorous UX, production reliability. Team uses <strong style="color: #FFE082;">exact architecture (Next.js + Vercel/Supabase)</strong> for UAEI. Not theoretical proposals—<strong style="color: #4CAF50;">proven capability</strong> building international-grade platforms we'll now deploy for SA farmers.
                             </p>
                         </div>
                     </div>
