--- a/index.html
+++ b/index.html
@@ -2198,10 +2198,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/2.8.0/countUp.umd.min.js"></script>
 
     <!-- Modal data FIRST -->
-    <script src="data.js?v=200"></script>
+    <script src="data.js?v=20251111-1000"></script>
 
     <!-- LOAD NAVIGATION (now includes modal functions) -->
-    <script src="app.js?v=200"></script>
+    <script src="app.js?v=20251111-1000"></script>
 
     <!-- DRAMATIC ANIMATIONS SYSTEM -->
     <script>
