--- a/index.html
+++ b/index.html
@@ -2432,6 +2432,14 @@
         console.log('modalContent loaded:', typeof window.modalContent);
         if (window.modalContent) {
             console.log('modalContent keys:', Object.keys(window.modalContent));
+            console.log('✅ MODAL SYSTEM READY - ' + Object.keys(window.modalContent).length + ' modals loaded');
+            // Visual debug indicator
+            const debugDot = document.createElement('div');
+            debugDot.style.cssText = 'position:fixed;bottom:10px;right:10px;width:12px;height:12px;background:#4CAF50;border-radius:50%;z-index:99999;box-shadow:0 0 10px rgba(76,175,80,0.8);';
+            debugDot.title = 'Modal system active (' + Object.keys(window.modalContent).length + ' modals)';
+            document.body.appendChild(debugDot);
+        } else {
+            console.error('❌ MODAL CONTENT NOT LOADED!');
         }
 
         // Test modal elements
