ADD: WhatsApp/social media preview meta tags with UAEI logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAEI - R3.5M TIA Innovation Fund | Technology-Enabled Smallholder Transformation</title>
     <meta name="description" content="Ubuntu Agricultural Empowerment Initiative - R3.5M TIA Innovation Fund Application | 100 Farmers | 12 Months | Limpopo Province">
+
+    <!-- Open Graph / WhatsApp Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bakiel.github.io/uaei-r35m-12month-pilot/">
+    <meta property="og:title" content="UAEI - R3.5M TIA Innovation Fund">
+    <meta property="og:description" content="Ubuntu Agricultural Empowerment Initiative - Technology-Enabled Smallholder Transformation | 100 Farmers | 12 Months | Limpopo Province">
+    <meta property="og:image" content="https://bakiel.github.io/uaei-r35m-12month-pilot/assets/UAEI%20Logo%20for%20dark%20BG.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="UAEI - R3.5M TIA Innovation Fund">
+    <meta name="twitter:description" content="Ubuntu Agricultural Empowerment Initiative - Technology-Enabled Smallholder Transformation">
+    <meta name="twitter:image" content="https://bakiel.github.io/uaei-r35m-12month-pilot/assets/UAEI%20Logo%20for%20dark%20BG.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css?v=129">
