--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://bakiel.github.io/uaei-r35m-12month-pilot/">
     <meta property="og:title" content="UAEI - R3.5M TIA Innovation Fund">
     <meta property="og:description" content="Ubuntu Agricultural Empowerment Initiative - Technology-Enabled Smallholder Transformation | 100 Farmers | 12 Months | Limpopo Province">
-    <meta property="og:image" content="https://bakiel.github.io/uaei-r35m-12month-pilot/assets/UAEI%20Logo%20for%20dark%20BG.png">
+    <meta property="og:image" content="https://bakiel.github.io/uaei-r35m-12month-pilot/assets/UAEI%20Logo%20for%20light%20BG.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="UAEI - R3.5M TIA Innovation Fund">
     <meta name="twitter:description" content="Ubuntu Agricultural Empowerment Initiative - Technology-Enabled Smallholder Transformation">
-    <meta name="twitter:image" content="https://bakiel.github.io/uaei-r35m-12month-pilot/assets/UAEI%20Logo%20for%20dark%20BG.png">
+    <meta name="twitter:image" content="https://bakiel.github.io/uaei-r35m-12month-pilot/assets/UAEI%20Logo%20for%20light%20BG.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
