--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <div class="hero-company">Ubuntu Agricultural Empowerment Initiative</div>
                     <div class="hero-tagline-compact" style="font-style: italic; line-height: 1.5;">
                         <i class="fas fa-quote-left"></i>
-                        Connect 100 Farmers Direct to 15+ Institutional Buyers<br>
-                        R5/kg Exploitation → R12-15/kg Fair Value<br>
-                        <span style="color: #4CAF50; font-weight: 600;">Geographic AI Unlocks 9-Province Scale</span>
+                        Pilot to Connect 100 Farmers Direct to 15+ Institutional Buyers<br>
+                        R5/kg Exploitation → R12-15/kg Fair Value (R2.26M Pre-Signed Contracts)<br>
+                        <span style="color: #4CAF50; font-weight: 600;">12-Month Validation → 9-Province Scale</span>
                         <i class="fas fa-quote-right"></i>
                     </div>
                 </div>
@@ -196,8 +196,8 @@
                         <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #2196F3; margin-bottom: 1vh; font-weight: 800;">TRL 3-4</h3>
                         <p style="font-size: clamp(0.85rem, 1.6vw, 1rem); color: #fff; font-weight: 600; margin-bottom: 1.2vh;">Market Validated | Tech Ready to Build</p>
                         <ul style="text-align: left; font-size: clamp(0.75rem, 1.4vw, 0.9rem); color: #ccc; line-height: 1.5; padding-left: 1.5vw; margin: 0;">
-                            <li><strong style="color: #2196F3;">R2.26M contracted revenue</strong> (Urban Nomad + Tembisa West School)</li>
-                            <li><strong style="color: #2196F3;">Contracts signed Feb/June 2025</strong> (5-9 months BEFORE funding)</li>
+                            <li><strong style="color: #2196F3;">R2.26M pre-signed contracts (dormant)</strong> (Urban Nomad + Tembisa West School)</li>
+                            <li><strong style="color: #2196F3;">Contracts signed Feb/June 2025</strong> (BEFORE platform exists — TIA activates)</li>
                             <li><strong style="color: #2196F3;">7-year operating company</strong> (R12M revenue track record)</li>
                             <li><strong style="color: #2196F3;">Platform architecture designed</strong> (ready to deploy)</li>
                             <li><strong style="color: #2196F3;">Team assembled</strong> (proven operators)</li>
@@ -222,15 +222,15 @@
                         <div style="background: linear-gradient(135deg, #4CAF50, #2E7D32); width: clamp(50px, 6vh, 70px); height: clamp(50px, 6vh, 70px); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5vh auto; font-size: clamp(1.5rem, 3vh, 2.2rem); color: #fff;">
                             <i class="fas fa-rocket"></i>
                         </div>
-                        <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #4CAF50; margin-bottom: 1vh; font-weight: 800;">TRL 6</h3>
-                        <p style="font-size: clamp(0.85rem, 1.6vw, 1rem); color: #fff; font-weight: 600; margin-bottom: 1.2vh;">Technology Validated (Operating Environment)</p>
+                        <h3 style="font-size: clamp(1.1rem, 2.2vw, 1.5rem); color: #4CAF50; margin-bottom: 1vh; font-weight: 800;">TRL 6 (Target Month 12)</h3>
+                        <p style="font-size: clamp(0.85rem, 1.6vw, 1rem); color: #fff; font-weight: 600; margin-bottom: 1.2vh;">Technology Validated (Pilot Outcomes)</p>
                         <ul style="text-align: left; font-size: clamp(0.75rem, 1.4vw, 0.9rem); color: #ccc; line-height: 1.5; padding-left: 1.5vw; margin: 0;">
-                            <li><strong style="color: #4CAF50;">Platforms built & deployed</strong> (fulfilling existing contracts)</li>
-                            <li><strong style="color: #4CAF50;">100 real farmers</strong> actively using technology</li>
-                            <li><strong style="color: #4CAF50;">R2.5M+ farmer sales</strong> facilitated</li>
-                            <li><strong style="color: #4CAF50;">80%+ farmer retention</strong> (proof of value)</li>
-                            <li><strong style="color: #4CAF50;">400+ videos created</strong> (educational library)</li>
-                            <li><strong style="color: #4CAF50;">12-month operational data</strong> (scalability proven)</li>
+                            <li><strong style="color: #4CAF50;">Platforms to build & deploy</strong> (activate dormant contracts)</li>
+                            <li><strong style="color: #4CAF50;">100 pilot farmers</strong> to validate technology</li>
+                            <li><strong style="color: #4CAF50;">R2.5M+ farmer sales</strong> projected</li>
+                            <li><strong style="color: #4CAF50;">80%+ farmer retention target</strong> (proof of value)</li>
+                            <li><strong style="color: #4CAF50;">400+ videos to create</strong> (educational library)</li>
+                            <li><strong style="color: #4CAF50;">12-month operational data</strong> to collect</li>
                         </ul>
                         <div style="margin-top: 1.2vh; padding: 1vh 1.2vw; background: rgba(76, 175, 80, 0.2); border-radius: 8px;">
                             <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #A5D6A7; margin: 0; font-style: italic;">🎯 READY FOR R508.6M IDC DEPLOYMENT</p>
@@ -247,8 +247,8 @@
                         <div>
                             <h4 style="font-size: clamp(1rem, 2vw, 1.3rem); color: #4CAF50; margin-bottom: 0.8vh; font-weight: 700;">Why This Is a STRONGER Application</h4>
                             <p style="font-size: clamp(0.85rem, 1.6vw, 1rem); color: #ddd; line-height: 1.5; margin: 0;">
-                                <strong style="color: #FFE082;">Most applications: Build technology → hope buyers appear (speculative).</strong> UAEI approach: Sign buyers → build technology to fulfill contracts (de-risked).
-                                <strong style="color: #4CAF50;">Market risk eliminated. R2.26M in binding contracts prove buyers will pay.</strong> TIA funding only validates technology execution—market demand confirmed.
+                                <strong style="color: #FFE082;">Most applications: Build technology → hope buyers appear (speculative).</strong> UAEI approach: Sign buyers FIRST → build technology to activate contracts (de-risked).
+                                <strong style="color: #4CAF50;">Market risk eliminated. R2.26M pre-signed contracts (dormant, awaiting platform) prove buyers will pay.</strong> TIA activates infrastructure—market demand pre-validated.
                             </p>
                         </div>
                     </div>
@@ -511,7 +511,7 @@
                     <div class="icon"><i class="fas fa-seedling"></i></div>
                     <div class="number">91M</div>
                     <div class="label">Year 1 Foundation</div>
-                    <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #666; margin-top: 0.8vh;">100 farmers | Start data collection</p>
+                    <p style="font-size: clamp(0.7rem, 1.3vw, 0.85rem); color: #666; margin-top: 0.8vh;">100 farmers pilot | Will start data collection</p>
                     <div class="glow-dot"></div>
                 </div>
                 <div class="stat-card hover-lift backdrop-blur" onclick="showModal('data-year5')" style="position: relative;">
@@ -1191,9 +1191,9 @@
                     <h3>TIA Compliance Criteria:</h3>
                     <ul class="is-list">
                         <li><i class="fas fa-check"></i> <strong>Technology-Enabled SME:</strong> 100% tech infrastructure (R1.84M CAPEX: R960k vehicle, R731k tech equipment, R150k content gear), zero farm acquisition, AI/ML/fintech innovation</li>
-                        <li><i class="fas fa-check"></i> <strong>Early-Stage Innovation (TRL 3-4→6):</strong> Market validated (R2.26M contracts signed), concept + feasibility complete (business plans ready), pilot will BUILD 6 platforms, validate with 100 farmers by Month 12</li>
+                        <li><i class="fas fa-check"></i> <strong>Early-Stage Innovation (TRL 3-4→6):</strong> Market pre-validated (R2.26M contracts pre-signed, dormant, TIA activates), concept + feasibility complete (business plans ready), pilot will BUILD 6 platforms, validate with 100 farmers by Month 12</li>
                         <li><i class="fas fa-check"></i> <strong>SA Intellectual Property:</strong> JASPER™ financial model SA-developed, open-source AI models (self-hosted), zero cross-border data flows (POPIA compliant), 100% SA IP ownership</li>
-                        <li><i class="fas fa-check"></i> <strong>High-Risk, High-Impact:</strong> 5 direct jobs created (youth under 35), 100 farmers empowered, R2.5M+ farmer sales facilitated, pathway to R508.6M IDC deployment</li>
+                        <li><i class="fas fa-check"></i> <strong>High-Risk, High-Impact:</strong> 5 direct jobs to create (youth under 35), 100 farmers to empower, R2.5M+ farmer sales to facilitate, pathway to R508.6M IDC deployment</li>
                         <li><i class="fas fa-check"></i> <strong>Financial Sustainability:</strong> Post-pilot revenue model (farmer subscriptions + transaction fees), clear commercialisation pathway, TIA repayment via IDC deployment or Series A exit</li>
                     </ul>
                 </div>
@@ -1202,7 +1202,7 @@
             <div class="analogy-box">
                 <i class="fas fa-award" style="font-size: clamp(2rem, 3vw, 2.5rem); color: #4CAF50; margin-bottom: 1vh;"></i>
                 <p style="font-size: clamp(1rem, 1.8vw, 1.3rem); line-height: 1.6; margin: 0;">
-                    <strong style="color: #4CAF50;">Honest positioning.</strong> TRL 3-4 concept stage with market validation COMPLETE (R2.26M contracts signed). Pilot will BUILD technology to prove viability at 100-farmer scale BEFORE R508.6M IDC deployment. Every TIA criterion met, every risk transparent, every outcome measurable.
+                    <strong style="color: #4CAF50;">Honest positioning.</strong> TRL 3-4 concept stage with market pre-validated (R2.26M contracts pre-signed, dormant, TIA activates). Pilot will BUILD technology to prove viability at 100-farmer scale BEFORE R508.6M IDC deployment. Every TIA criterion met, every risk transparent, every outcome measurable.
                 </p>
             </div>
         </div>
@@ -1577,7 +1577,7 @@
                 <div class="component-right">
                     <h3>Investment Stages:</h3>
                     <ul class="is-list">
-                        <li><i class="fas fa-rocket"></i> <strong>Stage 1 (Month 12):</strong> R3.5M deployed → 100 farmers active, R2.5M+ farmer sales facilitated, 1.7x asset return (R6M pilot assets created)</li>
+                        <li><i class="fas fa-rocket"></i> <strong>Stage 1 (Month 12):</strong> R3.5M deployed → 100 farmers validated, R2.5M+ farmer sales projected, 1.7x asset return (R6M pilot assets to create)</li>
                         <li><i class="fas fa-chart-line"></i> <strong>Stage 2 (Month 18):</strong> R6M pilot assets → R2M content library + R1M platform + R1M AI algorithms + R500k data + R1.5M proven model</li>
                         <li><i class="fas fa-trophy"></i> <strong>Stage 3 (Month 24-30):</strong> R508.6M IDC → 10,000 farmers (national scale), revenue model activated, TIA repayment pathway</li>
                     </ul>
